--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Nombre del Sitio
-description: Descripción del negocio
-url: "https://tudominio.com"
+title: OptimexEcuador
+description: Optica Optimex
+url: "https://optimexecuador.com"
 theme: minima
 
 plugins:
